Add values to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ charts/eureka/values.yaml
 values.yaml
 
 !/charts/eureka/values.yaml
+!/charts/auth-service/values.yaml
+!/charts/api-gateway/values.yaml
